Fix page width and column gap

--- a/styles/all.scss
+++ b/styles/all.scss
@@ -2,7 +2,7 @@
 
 .app-grid {
   display: grid;
-  grid-gap: 2rem;
+  grid-gap: 4rem;
 }
 
 @media (min-width: 50em) {
@@ -73,4 +73,8 @@
 .govuk-hint {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.govuk-width-container {
+  max-width: 1020px;
 }
